--- a/Css/main.css
+++ b/Css/main.css
@@ -7,11 +7,11 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 3%;
+    padding: 1.2rem 3%;
     overflow-x: hidden;
     overflow-y: hidden;
-    
-
+    background-color: #4758f0;
+    z-index: 997;
 }
 
 body{
@@ -23,8 +23,8 @@ body{
 }
 
 .menu{
-    margin-left: 30px;
-    margin-top: 10px;
+    margin-left: .1rem;
+    margin-top: -2.7rem;
 }
 
 .menuTrigger{
@@ -45,10 +45,10 @@ body{
 
 .menu .linhas span{
     display: block;
-    width: 35px;
-    height: 5px;
-    margin: 10px;
-    background-color:#4758F0;
+    width: 30px;
+    height: 3px;
+    margin: 8px;
+    background-color:#f5f5f5;
     border-radius: 5px;
     transition: all ease 0.1s;
 }
@@ -60,7 +60,7 @@ body{
 /*LINHAS DO MENU HAMBURGER*/
 .menuTrigger:checked ~ .linhas span:nth-child(1){
     transform-origin: 0% 0%;
-    transform: rotate(45deg) scaleX(1.25);
+    transform: rotate(45deg) scaleX(1.1);
 }
 
 .menuTrigger:checked ~ .linhas span:nth-child(2){
@@ -69,7 +69,7 @@ body{
 
 .menuTrigger:checked ~ .linhas span:nth-child(3){
     transform-origin: 0% 100%;
-    transform: rotate(-45deg) scaleX(1.25);
+    transform: rotate(-45deg) scaleX(1.1);
 }
 
 .menu ul{
@@ -79,9 +79,11 @@ body{
     top: 0;
     width: 250px;
     height: 100vh;
-    padding-top: 100px;
+    padding-top: 70px;
+    padding-left: -50px;
     background-color: #4758F0;
-    margin-left: -250px;
+    margin-left: -260px;
+    box-shadow: 3px 0px 7px 1px rgba(0, 0, 0, 0.3);
     transition: all ease .2s;
 }
 
@@ -100,5 +102,16 @@ body{
 }
 
 .menu ul li a:hover{
+    opacity: 0.7;
+}
+
+.logo{
+    text-decoration: none;
+    color: #f5f5f5;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-right: .6rem;
+}
+
+.logo:hover{
     opacity: 0.7;
 }
