--- a/Css/telaReport.css
+++ b/Css/telaReport.css
@@ -16,6 +16,10 @@ header{
 
 }
 
+main{
+    background-color: #f5f5f5;
+}
+
 #voltar{
     font-size: 1.5rem;
     color: #f5f5f5;
@@ -27,12 +31,21 @@ header{
 }
 
 main{
-    margin-top: 2rem;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-color: #4758f0;
-    min-height: 20vh;
     padding: 2rem;
     border-radius: 24px;
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+}
+
+.tudo{
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
 }
 
 h2{
@@ -63,6 +76,7 @@ h2{
 form{
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 form input[type="submit"]{
