--- a/Css/contatosUteis.css
+++ b/Css/contatosUteis.css
@@ -5,6 +5,14 @@
     overflow-x: hidden;
 }
 
+body{
+    text-decoration: none;
+    list-style: none;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
 header{
     display: flex;
     justify-content: space-between;
@@ -60,4 +68,85 @@ i{
 
 #voltar{
     font-size: 1.5rem;
+}
+
+.menu{
+    margin-left: .1rem;
+    margin-top: -2.7rem;
+}
+
+.menuTrigger{
+    position: absolute;
+    z-index: 1000;
+    width: 50px;
+    height: 45px;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.menu .linhas{
+    position: absolute;
+    z-index: 999;
+}
+
+.menu .linhas span{
+    display: block;
+    width: 30px;
+    height: 3px;
+    margin: 8px;
+    background-color:#f5f5f5;
+    border-radius: 5px;
+    transition: all ease 0.1s;
+}
+
+.menuTrigger:checked ~.linhas span{
+    background-color: #f5f5f5;
+}
+
+/*LINHAS DO MENU HAMBURGER*/
+.menuTrigger:checked ~ .linhas span:nth-child(1){
+    transform-origin: 0% 0%;
+    transform: rotate(45deg) scaleX(1.1);
+}
+
+.menuTrigger:checked ~ .linhas span:nth-child(2){
+    opacity: 0;
+}
+
+.menuTrigger:checked ~ .linhas span:nth-child(3){
+    transform-origin: 0% 100%;
+    transform: rotate(-45deg) scaleX(1.1);
+}
+
+.menu ul{
+    position: absolute;
+    z-index: 998;
+    left: 0;
+    top: 0;
+    width: 250px;
+    height: 100vh;
+    padding-top: 70px;
+    padding-left: -50px;
+    background-color: #4758F0;
+    margin-left: -260px;
+
+    transition: all ease .2s;
+}
+
+.menuTrigger:checked ~ ul{
+    margin-left: 0 ;
+}
+
+.menu ul li{
+    padding: 10px 30px;
+}
+
+.menu ul li a{
+    text-decoration: none;
+    color: #f5f5f5;
+    transition: all ease 0.2s;
+}
+
+.menu ul li a:hover{
+    opacity: 0.7;
 }
