--- a/Css/telaSobre.css
+++ b/Css/telaSobre.css
@@ -40,15 +40,100 @@ main{
 
 
 
-form input[type="submit"]{
-    margin-top: 1.5rem;
+form {
+    margin-top: .3rem;
     margin-bottom: 1rem;
-    background: #f5f5f5;
+    background: #e9e9e9;
     color: #4758f0;
     font-weight: bold;
     font-size: 1rem;
     border-radius: 16px;
     border: none;
-    padding: .4rem;
+    padding: .8rem;
     cursor: pointer;
+}
+
+form a{
+    color: #303b9e;
+}
+
+.menu{
+    margin-left: .1rem;
+    margin-top: -2.7rem;
+}
+
+.menuTrigger{
+    position: absolute;
+    z-index: 1000;
+    width: 50px;
+    height: 45px;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.menu .linhas{
+    position: absolute;
+    z-index: 999;
+}
+
+.menu .linhas span{
+    display: block;
+    width: 30px;
+    height: 3px;
+    margin: 8px;
+    background-color:#f5f5f5;
+    border-radius: 5px;
+    transition: all ease 0.1s;
+}
+
+.menuTrigger:checked ~.linhas span{
+    background-color: #f5f5f5;
+}
+
+/*LINHAS DO MENU HAMBURGER*/
+.menuTrigger:checked ~ .linhas span:nth-child(1){
+    transform-origin: 0% 0%;
+    transform: rotate(45deg) scaleX(1.1);
+}
+
+.menuTrigger:checked ~ .linhas span:nth-child(2){
+    opacity: 0;
+}
+
+.menuTrigger:checked ~ .linhas span:nth-child(3){
+    transform-origin: 0% 100%;
+    transform: rotate(-45deg) scaleX(1.1);
+}
+
+.menu ul{
+    position: absolute;
+    z-index: 998;
+    left: 0;
+    top: 0;
+    width: 250px;
+    height: 100vh;
+    padding-top: 70px;
+    padding-left: -50px;
+    background-color: #4758F0;
+    margin-left: -260px;
+
+    transition: all ease .2s;
+}
+
+.menuTrigger:checked ~ ul{
+    margin-left: 0 ;
+}
+
+.menu ul li{
+    padding: 10px 30px;
+}
+
+.menu ul li a{
+    text-decoration: none;
+    color: #f5f5f5;
+    transition: all ease 0.2s;
+}
+
+.menu ul li a:hover{
+    opacity: 0.7;
 }
