--- a/Css/telaReport.css
+++ b/Css/telaReport.css
@@ -30,3 +30,61 @@ main{
     color: #f5f5f5;
 }
 
+.adicionarPonto{
+    padding: 25px 25px 25px 25px;
+    background-color:#4758f0;
+    border: none;
+    border-radius: 80px;
+}
+
+.adicionarPonto:hover{
+    background-color: rgb(41, 63, 173);
+}
+
+.adicionarPontoCaixa{
+    position: absolute;
+    z-index: 1000;
+    right: 20px;
+    bottom: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.adicionarPontoCaixa h4{
+    margin-top: 5px;
+    color: rgba(236, 53, 53);
+    font-weight: bold;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.336);
+}
+
+#plus{
+    font-size: 25px;
+    color: #f5f5f5;
+}
+.tirarPontoCaixa{
+    position: absolute;
+    z-index: 1000;
+    right: 24px;
+    bottom: 200px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    visibility: hidden;
+}
+.tirarPonto{
+    padding: 25px 25px 25px 25px;
+    background-color:#d24d4d;
+    border: none;
+    border-radius: 80px;
+}
+
+.tirarPonto:hover{
+    background-color: rgb(173, 41, 41);
+}
+#x{
+    font-size: 20px;
+    color: #f5f5f5;
+}
