--- a/Css/telaLogin-Cadastro.css
+++ b/Css/telaLogin-Cadastro.css
@@ -44,6 +44,7 @@ h2{
     color: #f5f5f5;
     display: flex;
     justify-content: center;
+    padding-top: .9rem;
 }
 
 .campoInput{
@@ -84,7 +85,20 @@ form{
     color: #dadada;
     font-size: 14px;
 }
-
+.buttonLogin{
+    
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+    background: #f5f5f5;
+    color: #4758f0;
+    font-weight: bold;
+    font-size: 1rem;
+    border-radius: 16px;
+    border: none;
+    padding: .4rem;
+    cursor: pointer;
+    width: 100%;
+}
 form input[type="submit"]{
     margin-top: 1.5rem;
     margin-bottom: 1rem;
