--- a/Css/telaLogin-Cadastro.css
+++ b/Css/telaLogin-Cadastro.css
@@ -44,7 +44,7 @@ h2{
     color: #f5f5f5;
     display: flex;
     justify-content: center;
-    padding-top: .9rem;
+    padding-top: .2rem;
 }
 
 .campoInput{
@@ -65,26 +65,23 @@ form{
 }
 
 .campoLink{
-    padding-left: 10px;
+    display: block;
+    padding-top: 1.2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
 
-.campoLink ul{
-    display: flex;
+.campoLink a{
+    color: #c2c2c2;
 }
 
-#linkCadastro{
-    margin-right: 9.2rem;
-}
-
-.campoLink ul li{
-    margin-right: 1rem;
+.divisor{
     margin-top: .5rem;
+    margin-bottom: .5rem;
+    background-color: #f5f5f5;
+    border-bottom: solid .01rem #f5f5f5;
 }
 
-.campoLink ul li a{
-    color: #dadada;
-    font-size: 14px;
-}
 .buttonLogin{
     
     margin-top: 1.5rem;
